<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.loohp</groupId>
	<artifactId>InteractiveChatDiscordSrvAddon</artifactId>
	<version>1.2.4.0</version>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
					<relocations>
						<relocation>
							<pattern>com.cryptomorin.xseries</pattern>
							<shadedPattern>com.loohp.interactivechatdiscordsrvaddon.Utils</shadedPattern>
						</relocation>
						<relocation>
							<pattern>club.minnced.discord</pattern>
							<shadedPattern>com.loohp.interactivechatdiscordsrvaddon.Utils</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>paper-repo</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
		</repository>
		<repository>
			<id>bungeecord-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
		<repository>
			<id>Scarsz-Nexus</id>
			<url>https://nexus.scarsz.me/content/groups/public/</url>
		</repository>
		<repository>
			<name>jcenter</name>
			<id>bintray-jcenter</id>
			<url>https://jcenter.bintray.com</url>
		</repository>
		<repository>
			<id>codemc-snapshots</id>
			<url>https://repo.codemc.org/repository/maven-snapshots/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>club.minnced</groupId>
			<artifactId>discord-webhooks</artifactId>
			<version>0.4.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.cryptomorin</groupId>
			<artifactId>XSeries</artifactId>
			<version>7.5.5</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.16.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency> 
			<groupId>Spigot-1.16.3</groupId>
			<artifactId>Spigot-1.16.3</artifactId> 
			<version>1.0</version>
			<systemPath>${basedir}/lib/spigot-1.16.4.jar</systemPath> 
			<scope>system</scope>
		</dependency> 
		<dependency>
			<groupId>com.discordsrv</groupId>
			<artifactId>discordsrv</artifactId>
			<version>1.19.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.loohp</groupId>
			<artifactId>InteractiveChat</artifactId>
			<version>3.2.3.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>